--- a/5d-jwt/.env
+++ b/5d-jwt/.env
@@ -3,8 +3,8 @@
 PORT=3000
 
 # Format: postgresql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>
-DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+DATABASE_URL=postgresql://postgres:mypassword@localhost:5432/postgres
 
 JWT_SECRET=myjwtsecret123
-JWT_EXPIRY=900
+JWT_EXPIRY=86400
 SALT_ROUNDS=10
