--- a/5b-postgres/.env
+++ b/5b-postgres/.env
@@ -3,4 +3,4 @@
 PORT=3000
 
 # Format: postgresql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>
-DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+DATABASE_URL=postgresql://postgres:mypassword@localhost:5432/api
